# AutoAstro

./: AutoAstro.cabal  CHANGELOG.md  README.md  default.nix
app/: Main.hs
src/: AutoAstro.hs  Bilinear.hs  LogPolar.hs  PhaseCorrelate.hs
