cabal-version:       2.0
name:                AutoAstro
version:             0.0.0.0
synopsis:            Automatic tools for improving astronomy images.
description:         Automatic tools for improving astronomy images.
license:             AllRightsReserved
author:              timput
maintainer:          tim@timput.com
copyright:           2020 timput
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

library
  hs-source-dirs:      src
  exposed-modules:     AutoAstro
                       PhaseCorrelate           

  build-depends:       base ^>= 4.13.0.0
                     , strict-concurrency
                     , deepseq
                     , vector
                     , JuicyPixels
                     , timeit
                     , fft
                     , split
                     , carray

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010


executable AutoAstroProf
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.13.0.0
                     , AutoAstro
                     , strict-concurrency
                     , deepseq
                     , vector
                     , JuicyPixels
                     , timeit
                     , fft
                     , split
                     , carray

  ghc-options:         -Wall
                       -O2
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -p -s -h -i0.1"
                       -fprof-auto
                       -prof
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
  default-language:    Haskell2010

executable AutoAstro
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.13.0.0
                     , AutoAstro
                     , strict-concurrency
                     , deepseq
                     , vector
                     , JuicyPixels
                     , timeit
                     , fft
                     , split
                     , carray

  ghc-options:         -Wall
                       -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

test-suite AutoAstro-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.13.0.0
                     , AutoAstro
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

benchmark AutoAstro-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base ^>= 4.13.0.0
                     , gauge
                     , AutoAstro
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
